# resummarized

./: .gitignore  AGENTS.md  Dockerfile  Procfile.tailwind  README.md  TODO.md  build_docker.sh  entrypoint.sh  main.py  manage.py  pyproject.toml
.github/workflows/: docker-image.yml
articles/: admin.py  ai.py  apps.py  get_module_info.py  models.py  signals.py  tasks.py  urls.py  views.py
articles/components/article_card/: _pin_button.html  article_card.html  article_card.py
articles/components/articles_datalist/: articles_datalist.html  articles_datalist.py
articles/components/for_you_articles/: for_you_articles.html  for_you_articles.py
articles/components/latest_articles/: latest_articles.html  latest_articles.py
articles/components/pinned_articles/: pinned_articles.html  pinned_articles.py
articles/migrations/: 0001_initial.py  0002_initial.py  0003_alter_article_background_context_and_more.py  0004_articlepins.py  0005_articletags_article_tags.py  0006_rename_articletags_articletag.py  0007_alter_article_tags.py  0008_remove_article_background_context_and_more.py  0009_articlevideo.py
articles/source_feeds/: __init__.py  arstechnica.py  atom.py  base.py  gizmodo.py  google.py  meta.py  reddit.py  rss.py  sciencefocus.py  techcrunch.py  techradar.py
articles/templates/: _pin_button.html
articles/templates/admin/: task_error.html  task_progress.html
articles/templatetags/: markdown_extras.py  url_extras.py
components/card/: card.html  card.py
components/collapsible/: collapsible.html  collapsible.py
components/layouts/: base_layout.py
components/layouts/app/: app_layout.html  app_layout.py
components/layouts/card/: card_layout.html  card_layout.py
components/layouts/navbar/: navbar_layout.html  navbar_layout.py
components/layouts/user/: user_layout.html  user_layout.py
components/link/: link.html  link.py
components/search_articles/: search_articles.html  search_articles.py
components/sidebar/: sidebar.html  sidebar.py
components/sidebar_tags/: sidebar_tags.html  sidebar_tags.py
components/tabs/: tabs.html  tabs.py
resummarized_django/: asgi.py  celery.py  embeddings.py  settings.py  urls.py  views.py  wsgi.py
theme/static/js/: fx_extensions.js
theme/templates/: base.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/: article.html  dashboard.html  homepage.html  login.html  profile.html  signup.html  signup_success.html
